src/objects/Invoice_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>IGNORE THIS FIELD</description>
        <label>Amount IGNORE THIS FIELD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Header__c</fullName>
        <label>Invoice Header</label>
        <referenceTo>Invoice_Header__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Type__c</fullName>
        <label>Invoice Item Type (+/-)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scholarship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invoice_is_University_False</fullName>
        <active>true</active>
        <description>Invoice Item Type (+/-) is Additions and Deductions then Scholarship,Fee,Rate Should be Empty.</description>
        <errorConditionFormula>AND(
    Invoice_Header__r.Invoice_for_University__c = FALSE,
    CASE(
        Invoice_Item_Type__c,
        &quot;Deduction&quot;, 1,
        &quot;Addition&quot;, 1,
        0
    ) = 1,
    OR(
        AND(
            NOT(ISBLANK(Fee__c))
        ),
        AND(
            NOT(ISBLANK(Rate__c))
        ),
        AND(
            NOT(ISBLANK(Scholarship__c)),
            Scholarship__c &lt;&gt; 0
        )
    )
)</errorConditionFormula>
        <errorDisplayField>Invoice_Item_Type__c</errorDisplayField>
        <errorMessage>Scholarship , Fee , Rate Should be Empty if Invoice for University is False</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_is_University_True</fullName>
        <active>true</active>
        <description>Invoice Item Type (+/-) is Deductions then Scholarship,Fee,Rate Should be Empty.</description>
        <errorConditionFormula>AND(
    Invoice_Header__r.Invoice_for_University__c = TRUE,
    ISPICKVAL(Invoice_Item_Type__c, &quot;Deduction&quot;),
    OR(
        AND(
            NOT(ISBLANK(Fee__c))
        ),
        AND(
            NOT(ISBLANK(Rate__c))
        ),
        AND(
            NOT(ISBLANK(Scholarship__c)),
            Scholarship__c &lt;&gt; 0
        )
    )
)</errorConditionFormula>
        <errorDisplayField>Invoice_Item_Type__c</errorDisplayField>
        <errorMessage>Scholarship,Fee and Rate should be Empty if it is Deduction</errorMessage>
    </validationRules>
</CustomObject>